# youbot

./: README.md
hls_lfcd_lds_driver/: CMakeLists.txt
hls_lfcd_lds_driver/src/: hlds_laser_publisher_ang_lim.cpp
testbot_description/: package.xml
testbot_description/config/: testbot.rviz
testbot_description/launch/: testbot.launch
testbot_description/urdf/: testbot.urdf
youbot-manipulation/: README.md
youbot-manipulation/youbot_arm_kinematics/: CMakeLists.txt
youbot-manipulation/youbot_arm_kinematics_moveit/: CMakeLists.txt
youbot-manipulation/youbot_moveit/: CMakeLists.txt  package.xml
youbot_arm_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
youbot_arm_moveit/config/: controllers.yaml  grasp_data.yaml  kinematics.yaml  ompl_planning.yaml  youbot.srdf
youbot_arm_moveit/launch/: default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  grasp_generator_server.launch  move_group.launch  move_group_test.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  youbot_moveit_controller_manager.launch.xml  youbot_moveit_sensor_manager.launch.xml
youbot_arm_moveit/src/: youbot_move_group_add_object.cpp  youbot_move_group_plan_group_state.cpp  youbot_move_group_plan_random_target.cpp  youbot_move_group_plan_single_target.cpp  youbot_pick_and_place.py
youbot_description/: README.md
youbot_description/controller/: ros_controller.urdf.xacro
youbot_description/robots/: youbot.urdf.xacro  youbot_arm_only.urdf.xacro  youbot_base_only.urdf.xacro  youbot_with_cam3d.urdf.xacro
youbot_description/urdf/: common.xacro  (+1 more)
youbot_integrated/: CMakeLists.txt  README.md  package.xml
youbot_navigation/: README.md
youbot_vslam/: CMakeLists.txt  README.md  package.xml
(+91 files in other folders)
